# windows

./: .gitignore  CMakeLists.txt  README.md  atlas-erp-enterprise-v2.html  resources.qrc  run.sh
src/: AppWindow.cpp  AppWindow.h  DashboardWidget.cpp  DashboardWidget.h  DataTableWidget.cpp  DataTableWidget.h  DetachableTabBar.cpp  DetachableTabBar.h  Sidebar.cpp  Sidebar.h  StatusBar.cpp  StatusBar.h  StyleSheet.qss  TabHost.cpp  TabHost.h  TabSession.cpp  TabSession.h  TabView.cpp  TabView.h  TopHeader.cpp  TopHeader.h  WindowManager.cpp  WindowManager.h  main.cpp
